--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <nav>
+
+        </nav>
         <div>
             <ul>
                 <li>
@@ -23,8 +26,9 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
+    </header>
+    <!-- Added a figure class in place of div element -->
+    <figure class="hero"></figure>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
