--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
     </header>
-    <!-- Added a figure class in place of div element -->
+    <!-- Added a figure class in place of-->
     <figure class="hero"></figure>
     <div class="content">
         <div class="search-engine-optimization">
