--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- added the nav bar from div and chnaged the style.css form div to nav-->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,7 +23,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Added a figure class in place of-->
     <figure class="hero"></figure>
@@ -49,7 +50,8 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
+    <!-- Changed to asside -->
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -71,13 +73,16 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+    </aside>
+    <!-- Changed and added to Footer -->
+    <footer class="footer">
+            <h2>Made with ❤️️ by Horiseon</h2>
+            <p>
+                &copy; 2019 Horiseon Social Solution Services, Inc.
+            </p>
+
+    </footer>
+   
 </body>
 
 </html>
