--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Added a figure class in place of-->
     <figure class="hero"></figure>
     <!-- Changed to section or main instaed of div-->
-    <section class="content">
+    <main class="content">
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -49,8 +49,8 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        <<article>
-    </section>
+        </article>
+    </main>
     <!-- Changed to asside -->
     <aside class="benefits">
         <!-- Changed from div to article -->
@@ -78,7 +78,8 @@
     </aside>
     <!-- Changed and added to Footer -->
     <footer class="footer">
-            <h2>Made with ❤️️ by Horiseon</h2>
+        <!-- Changed the heading attributes to sequential order-->
+            <h3>Made with ❤️️ by Horiseon</h3>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
