Changed this class to an id and changed the css to follow the structure

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <figure class="hero"></figure>
     <!-- Changed to section or main instaed of div-->
     <main class="content">
-        <article class="search-engine-optimization">
+        <!-- Changed this class to an id-->
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO note book with laptop" />
             <h2>Search Engine Optimization</h2>
             <p>
